ecmascript/parser/tests/test262-error-references/fail/abc46381e4e6bcca.js.stderr
error: Not an utf-8 character: 55355
 --> $DIR/tests/test262-parser/fail/abc46381e4e6bcca.js:1:5
  |
1 | var \uD83B\uDE00
  |     ^^^^^^

